--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background: url('img/fitness.webp');
+        background: url('fitness.webp');
         background-size: 1500px;
     }
 
@@ -121,7 +121,7 @@
     <header class="header">
         <!-- Left box for logo -->
         <div class="left">
-            <img src="img/v.jpg" alt="">
+            <img src="v.jpg" alt="">
             <div>Vishu Fitness</div>
         </div>
 
