--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background: url('fitness.webp');
+        background: url('gym.webp');
         background-size: 1500px;
     }
 
